--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ section {
     border-radius: 50%;
     object-fit: cover; 
 
-
+}
 h2 {
     border-bottom: 2px solid #333;
     padding-bottom: 5px;
